log
Fri, May 16, 2025  7:23:50 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  7:30:25 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
f866f77
Fri, May 16, 2025  7:30:39 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
40c3da4
